chore: print OPA version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
         entrypoint: sh
     steps:
       - checkout
+      - run: /opa version
       - run:
           name: Lint policies
           command: |
